--- a/ui/package.json
+++ b/ui/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.0.17"
+    "react-scripts": "1.0.17",
+    "axios": "0.18.0",
+    "radium": "0.23.0",
+    "bootstrap": "4.0.0"
   },
   "devDependencies": {
     "ncp": "^2.0.0",
